--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,10 @@
     ],
     "require": {
         "php": ">=8.1",
-        "illuminate/mail": "^10",
+        "illuminate/mail": "^11",
         "sendinblue/api-v3-sdk": "^8.2.1",
-        "symfony/sendinblue-mailer": "~6.2.0",
-        "symfony/http-client": "~6.2.0"
+        "symfony/sendinblue-mailer": "^6.2.0",
+        "symfony/http-client": "^6.2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.0",
